# deepcool-cpu-monitor

./: Cargo.toml  README.md  example.config.toml
src/: args.rs  config.rs  constants.rs  convert_num.rs  cpu.rs  data.rs  log.rs  main.rs  path.rs  temperature.rs  usage.rs
