[package]
name = "deepcool-cpu-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.23"
hidapi = "2.6.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shellexpand = "3.1.2"
sysinfo = "0.39.3"
users = "0.11.0"
