[package]
name = "deepcool-cpu-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.23"
hidapi = "2.6.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shellexpand = "3.1.2"
sysinfo = "0.39.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
users = "0.11.0"
